0.5.0 - Released with KDE 4.3.0
------------------------------------------------------------------------
- Updated to LibRaw 0.7.1 : Fixed broken OpenMP support.
- Updated to LibRaw 0.7.0 : Black (masked) pixels data extracted from RAW and avaliable in application.
                            Application can turn off RAW data filtering (black level subtraction, 
                            zero pixels removal and raw tone curve).
                            New 'input framework' released. Reading raw data from file and memory buffer supported from scratch. 
                            LibRaw-using application can implement own data reading functions (e.g. reading from network stream).
                            Fuji SuperCCD: raw data extracted without 45-degree rotation.
                            New sample applications: 4channels and unprocessed_raw
                            Imported (subsequentally) new dcraw versions from 8.89 to 8.93 (up to date) 
- New option to switch on/off auto brightness adjsutements.
                        
0.4.0 - Released with KDE 4.2.0
------------------------------------------------------------------------
- Updated to LibRaw 0.6.5 : Fixed file descriptor and buffer memory leak when thumbnail extractor is called, 
                            but library object is not properly initialized.
                            Fixes in Imacon files unpacking.
                            Fixes in Hasselblad .fff files unpacking.
- Updated to LibRaw 0.6.3 : NEF processing code changed (some overflow control added).
- Updated to LibRaw 0.6.2.
- New cameras: Canon G10 & 5D Mk2, Leaf AFi 7, Leica D-LUX4,              
               Panasonic FX150 & G 1, Fujifilm IS Pro.
- Updated to LibRaw 0.6.1.
- New cameras: Canon 50D, Sony A900, Nikon D90 & P6000, Panasonic LX3 FZ28.
- Ported to LibRaw Api 0.6.0. Removed dcraw.c and DcrawBinary class.
- Use kDebug(51002) instead qDebug().

0.3.0 - Released with KDE 4.1.2